--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,19 @@
 @import "tailwindcss";
 /* Custom Font Start */
+
 @import url("https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap");
 
 .tektur {
   font-family: "Tektur", sans-serif;
+  font-weight: 400; /* Set default weight */
+  font-style: normal;
+  font-optical-sizing: auto;
+  font-variation-settings: "wdth" 100;
 }
 /* Custom Font End */
 
 body {
-  /* background: #032135; */
+  background: #ffffff;
   /* font-family: Arial, Helvetica, sans-serif; */
   margin: 0;
   padding: 30px 0px 30px 0px;
