--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
 @import "tailwindcss";
 /* Custom Font Start */
 
-@import url("https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap");
-
-.tektur {
-  font-family: "Tektur", sans-serif;
-  font-weight: 400; /* Set default weight */
-  font-style: normal;
-  font-optical-sizing: auto;
-  font-variation-settings: "wdth" 100;
+.roboto {
+  font-family: "Roboto", sans-serif !important ;
 }
 /* Custom Font End */
 
